# Application_tracking_system

./: README.md  connector.py  lessons.txt  main_crew.py  pyproject.toml  requirements.txt
Agents/: agents.py
Config/: configfile.yaml  configloader.py
Frontend/: main.py
Notebook/: check.ipynb
Tasks/: tasks.py
Tools/: custom_tool.py
web_server/: api_call.py
